bug <hr> non visibile per grid

--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ main,
     top: var(--nav-height);
     background-color: var(--yt-bg-black);
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
     z-index: 5;
     gap: 1rem;
     color: white;
